--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/saga-green/theme.css";
+
+html,
+body {
+    font-size: 12px !important;
+    margin: 0;
+    padding: 0;
+}
