--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,10 @@
     font-style: normal;
 }
 
+.bg-orange {
+    background: #e87d57;
+}
+
 .hero {
     height: 250px;
     width: 100%;
@@ -24,7 +28,6 @@
 .hero-date {
     font-size: 30px;
     font-weight: bold;
-    background: #e87d57;
     padding: 5px;
 }
 
