add total strokes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,6 +51,11 @@
           </tr>
         </thead>
         <tbody></tbody>
+        <tfoot>
+            <tr id="total-row">
+                <th colspan="1" class="date-column">Total Strokes</th>
+            </tr>
+        </tfoot>
       </table>
     </div>
   </p-tabPanel>
