add avg stoke row

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,6 +55,9 @@
             <tr id="total-row">
                 <th colspan="1" class="date-column">Total Strokes</th>
             </tr>
+            <tr id="average-row">
+                <th colspan="1" class="date-column">Avg Strokes</th>
+            </tr>
         </tfoot>
       </table>
     </div>
