--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
     </div>
     }
   </p-tabPanel>
-  <p-tabPanel header="Monthly">
+  <!-- <p-tabPanel header="Monthly">
     <div class="scrollwrapper">
       <table id="data-table" class="w-full" style="table-layout: fixed;">
         <thead>
@@ -61,5 +61,5 @@
         </tfoot>
       </table>
     </div>
-  </p-tabPanel>
+  </p-tabPanel> -->
 </p-tabView>
